# radiology-access-shock-tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md  Dockerfile  LICENSE  Makefile  PROJECT_STATE.md  README.md  SECURITY.md  STATUS.md  config.example.toml  pyproject.toml
.github/: CODEOWNERS  branch-protection.main.json
.github/workflows/: desktop-release.yml  quarterly-snapshot.yml  tests.yml  (+1 more)
data/: README.md  candidate_sites.csv  candidate_sites.metadata.json  candidate_sites_review.csv  candidate_sites_review.metadata.json  census_county_context_2024.csv  census_county_context_2024.metadata.json  census_tract_context_2024.csv  census_tract_context_2024.metadata.json  counties.csv  population_points.csv  population_points_tracts.csv
desktop_payload/: README.md
docs/: ARCHITECTURE.md  CHATGPT_JOURNAL_PROMPT.md  DATA_SOURCES.md  DESKTOP_RELEASES.md  GITHUB_PAGE_ASSETS.md  GITHUB_PUBLISHING.md  JOURNAL_REPORT_PACKAGE.md  METHODS.md  OPERATIONS.md  ROADMAP.md  index.md
scripts/: build_desktop.py  capture_github_assets.mjs  configure_github_governance.ps1  desktop_launcher.py  finalize_travel_time_package.py  package_release.ps1  run_self_hosted_osrm_matrix.sh
tests/: test_access.py  test_adapters.py  test_briefs.py  test_candidates.py  test_causal.py  test_changes.py  test_cli.py  test_demo.py  test_desktop.py  test_geo.py  test_geocoding.py  test_intervention.py  test_production.py  test_quality.py  test_readiness.py  test_sensitivity.py  test_snapshots.py  test_sources.py  test_travel_times.py
(+48 files in other folders)
