[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radiology-access-shock-tracker"
version = "0.1.0"
description = "Open-source surveillance for changes in mammography access and community impact."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Krishna Katuru"}]
dependencies = [
  "jinja2>=3.1",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.22",
  "pydantic>=2.7",
  "requests>=2.32",
  "streamlit>=1.36",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "ruff>=0.5",
]
desktop = [
  "pyinstaller>=6.0",
]

[project.scripts]
radshock = "radshock.cli:app"
radshock-desktop = "radshock.desktop:main"

[tool.hatch.build.targets.wheel]
packages = ["src/radshock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-tmp -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
